# systemrdl-toolkit

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  build.sh  cmdline_parser.h  csv2rdl_main.cpp  elaborator.cpp  elaborator.h  elaborator_main.cpp  json_output.h  parser_main.cpp  pyproject.toml  render_main.cpp  requirements.txt  systemrdl_api.cpp  systemrdl_api.h  systemrdl_version.h
.claude/commands/: commit.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
cmake/: SystemRDLConfig.cmake.in
doc/: API.md  DEVELOPMENT.md  RCSV.md  TOOLS.md
example/: CMakeLists.txt  README.md  example.cpp  test_example.rdl
script/: ast_output_validator.py  compare_implementations.py  csv2rdl_validator.py  json_output_validator.py  rdl_semantic_validator.py  template_render_validator.py  test_elaboration.py
test/: test_address_overlap.rdl  test_complex_arrays.rdl  test_comprehensive_gaps.rdl  test_expressions.rdl  test_field_boundary.rdl  test_field_overlap.rdl  test_field_overlap_simple.rdl  test_field_validation_comprehensive.rdl  test_j2_json_doc.md.j2  test_memory.rdl  test_param_expressions.rdl  test_parameterized.rdl  test_parameters.rdl
